hopefully fix Marcia's scrollbar issue

--- a/css/khan-exercise.css
+++ b/css/khan-exercise.css
@@ -47,10 +47,8 @@ body.debug .graphie { outline: 1px dashed red; }
 #answer_area input.button:disabled { opacity: 0.7; cursor: default; color: #333; }
 
 #issue .error { font-style: italic; font-weight: bold; }
-
 #issue-link { font-style: italic; }
-
 #issue form label { display: block; }
-#issue form input[type=text] { display: block; width: 100%; }
-#issue form textarea { width: 100%; height: 100px; }
+#issue form input[type=text] { display: block; width: 99%; }
+#issue form textarea { display: block; width: 99%; height: 100px; }
 #issue-cancel { position: relative; bottom: 1px; }
